Bug 637695: short-term fix to buildbot results: disable false-failure (r=fklockii).

As noted in comment added to selftest itself:

  // Conservative retention appears to be foiling the verify call below
  // Put back after identifying and eliminating the source of such
  // significant rentention (if possible).

(I've been working on the latter, but decided it won't be done in time
 and other engineers should not be getting build failure messages.)